--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -1,8 +1,7 @@
 name: notification
 'on':
-    push
-  # schedule:
-  # - cron: "0 0 * * 1"
+  schedule:
+   - cron: "30 5 * * 1" #Every Monday
 jobs:
   asciidoc:
     runs-on: ubuntu-latest
