--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -14,6 +14,7 @@ jobs:
             node-version: '16'
         - run: |
             npm install
+            npm audit
             npm audit fix --force
             chmod u+x notification.js
             ./notification.js --guid ${{ secrets.GUID }} --apikey ${{ secrets.APIKEY }} --slack ${{ secrets.WEBHOOK }}
